--- a/app/globals.css
+++ b/app/globals.css
@@ -21,21 +21,34 @@ body {
 }
 
 
-::-webkit-scrollbar {
+html,
+body {
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  height: 100%;
+}
+
+.message-container {
+  height: 72vh;
+  overflow-y: auto;
+}
+
+.message-container::-webkit-scrollbar {
   width: 8px;               /* width of the entire scrollbar */
 }
 
-::-webkit-scrollbar-track {
+.message-container::-webkit-scrollbar-track {
   background: #f0f0f0;      /* color of the background track */
   border-radius: 10px;
 }
 
-::-webkit-scrollbar-thumb {
+.message-container::-webkit-scrollbar-thumb {
   background-color: #888;   /* color of the scrolling thumb */
   border-radius: 10px;      
   border: 2px solid #f0f0f0;/* creates space around thumb */
 }
 
-::-webkit-scrollbar-thumb:hover {
+.message-container::-webkit-scrollbar-thumb:hover {
   background-color: #555;   /* color changes on hover */
 }
