--- a/app/globals.css
+++ b/app/globals.css
@@ -30,7 +30,7 @@ body {
 }
 
 .message-container {
-  height: 72vh;
+  height: 72dvh;
   overflow-y: auto;
 }
 
@@ -50,5 +50,5 @@ body {
 }
 
 .message-container::-webkit-scrollbar-thumb:hover {
-  background-color: #555;   /* color changes on hover */
+  background-color: #a3a3a3;   /* color changes on hover */
 }
