--- a/app/globals.css
+++ b/app/globals.css
@@ -21,13 +21,13 @@ body {
 }
 
 
-html,
+/* html,
 body {
   margin: 0;
   padding: 0;
   overflow: hidden;
   height: 100%;
-}
+} */
 
 .message-container {
   height: 60vh;
